_sass/my.scss
html { scroll-behavior: smooth; }
body { background-color: #222121; }

/* Container */
.mycontainer {
    width: 75%;
    min-width: 300px;
    max-width: 1400px;
    height: 90%;
    overflow-y: scroll;
    margin-top: auto;
    margin-bottom: auto;
    @include center-block();
    background-color: $white;
    color: $color_shark;
    z-index: 1;
    border-radius: 1.5%;
    box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
    /* SIZE: small = 480px, medium = 768px, large = 1000px */
    @media #{$small} {
        width: 100%;
        height: 100%;
    }
    @media #{$medium} {
        width: 90%;
        height: 93%;
    }
    @media #{$large} {
        width: 95%;
        height: 95%;
    }
    &.home {
        width: 30em;
        height: auto;
        padding: 15px;
        border-radius: 3px;
        @media #{$small} {
            width: 100%;
            height: 100%;
        }
        .row {
            padding: 0em !important;
        }
    }
    li {
        margin-left: 1px;
        list-style-type: square;
        text-align: left;
    }
    .description li {
        list-style: none;
        position: relative;
        margin-left: 0;
        padding-left: 1.1rem;
        text-indent: 0;
    }
    .description li::before {
        content: "";
        display: inline-block;
        width: 0.42em;
        height: 0.42em;
        background-color: currentColor;
        position: absolute;
        left: 0.05rem;
        top: 0.42em;
    }
    p {
        text-align: left;
    }
    /* code block */
    li code, p code, code {
        white-space: nowrap;
        background-color: #f9f9f9;
        margin: 0 2px;
        padding: 0 5px;
        font-size: 13px;
        border: 1px solid #d0d1d5;
        border-radius: 4px;

        &.txt-ignore {
            color: #e4e4e4;
            border: 0px;
        }
    }
    .code-highlight {
        white-space: nowrap;
        background-color: #0A4B73;
        color: white;
        font-weight: bolder;
    }
    .code-link {
        white-space: nowrap;
        background-color: #000000BD;
        color: #ffffff;
        cursor: pointer;
        font-weight: bolder;
    }
    .code-margin {
        white-space: nowrap;
        margin-left: 0px;
        margin-right: 3px;
    }
}
.mycontainer::-webkit-scrollbar {
    width: 0 !important;
}
/* Wrapper */
.mywrapper {
    width: 75%;
    max-width: 1000px;
    height: 90%;
    margin-top: auto;
    margin-bottom: auto;
    overflow-y: scroll;
    @include center-block();
    background: $white;
    color: $color_tuatara;
    border-radius: 3px;
    box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
    @media #{$small} {
        width: 100%;
        height: 100%;
        box-shadow: none;
    }
    @media #{$medium} {
        width: 90%;
        height: 93%;
    }
}
.mywrapper::-webkit-scrollbar {
    width: 0 !important;
}
/* Content */
.mycontent {
    @include font-size(14);
    padding: 0.01rem 3rem;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased !important;
    -moz-font-smoothing: antialiased !important;
    text-rendering: optimizelegibility !important;
    text-align: justify;
    line-height: 1.5;
}
/* Grid System */
.myrow {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: 25px 5px;
    border: 1px solid #ffffff00;
    &.hover {
        padding-top: 5px;
        padding-bottom: 5px;

        &.hover:hover {
            border: 1px solid #d0d0d0;
            border-radius: 6px;
            box-shadow: 2px 2px #d0d0d0;
        }
    }
    &.no-margin {
        // border: 1px solid #ffffff00;
        // box-shadow: 0px 0px #d0d0d0;
        margin: 0px 5px;
        @media #{$small}, #{$medium} {
            margin: 10px 5px;
        }
    }
}
.row-home {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: 20px 40px 20px 40px;
    font-size: .95rem;
    font-weight: 400;
    text-align: left;
}
.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col, .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
    text-align: left;
    position: relative;
    min-height: 1px;
    padding: 0 10px;
}
/* ... */

